updates PFA request to include resource (players, teams, game, plays, schedule)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fantasy-champ",
   "version": "1.0.0",
   "description": "Fantasy Football team manager",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
